[gd_scene load_steps=22 format=3 uid="uid://cwnxxystgxrjm"]

[ext_resource type="Script" uid="uid://cveotxqirn2cw" path="res://Scripts/UI/MissileTab.gd" id="1_2m6j3"]
[ext_resource type="Resource" uid="uid://cl8a6o13748s8" path="res://Resources/EventHandlers/MissileDockEventHandler.tres" id="2_uy6ab"]
[ext_resource type="Resource" uid="uid://daboq4ltk4k55" path="res://Resources/EventHandlers/DroneDockEventH.tres" id="3_5j6a5"]
[ext_resource type="Texture2D" uid="uid://7ukbsw5o0nhs" path="res://Assets/UIPiecies/Screen/MissileTab_FullQuality.png" id="4_nth3v"]
[ext_resource type="Texture2D" uid="uid://breuf54l2kc5u" path="res://Assets/UIPiecies/Screen/Button3_Camera 1_FullQuality.png" id="5_jqaeg"]
[ext_resource type="Texture2D" uid="uid://lsqk1x3emjbs" path="res://Assets/UIPiecies/Screen/Button3_Camera 1_FullQuality_Pressed.png" id="6_o630s"]
[ext_resource type="BitMap" uid="uid://1fe3bd6jslqu" path="res://Assets/UIPiecies/Screen/ButtonMask_Camera 1_FullQuality.png" id="7_602df"]
[ext_resource type="Texture2D" uid="uid://bxkdjy0yeuig4" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality.png" id="8_tvoe2"]
[ext_resource type="Texture2D" uid="uid://2gkqio6ka74a" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality_Pressed.png" id="9_5r1o0"]
[ext_resource type="Texture2D" uid="uid://cl1clnce643mg" path="res://Assets/UIPiecies/Screen/Button4_Camera 1_FullQuality.png" id="10_ng7p5"]
[ext_resource type="Texture2D" uid="uid://bgecu1r7dbryn" path="res://Assets/UIPiecies/Screen/Button4_Camera 1_FullQuality_Pressed.png" id="11_4sk4u"]
[ext_resource type="Texture2D" uid="uid://kxagwb8gq1pm" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality.png" id="12_q0qm5"]
[ext_resource type="Texture2D" uid="uid://byy7qb0rfhypw" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality_Pressed.png" id="13_y4ap4"]
[ext_resource type="Texture2D" uid="uid://cba3crf7vyc2x" path="res://Assets/Off.png" id="14_w0uv6"]
[ext_resource type="PackedScene" uid="uid://c812ersqwg8p1" path="res://Scenes/ScreenUI/light.tscn" id="15_pknbg"]
[ext_resource type="FontFile" uid="uid://ble63qtuapau3" path="res://Fonts/digital-7.ttf" id="16_6ithd"]
[ext_resource type="PackedScene" uid="uid://ckhssy2ej85mq" path="res://Scenes/ScreenUI/AnimatedDroneGas.tscn" id="17_ptq1t"]

[sub_resource type="Animation" id="Animation_brgwl"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, 216)]
}

[sub_resource type="Animation" id="Animation_wlayh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 162)]
}

[sub_resource type="Animation" id="Animation_stsyt"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 162), Vector2(0, -14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kt4fa"]
_data = {
&"Hide": SubResource("Animation_brgwl"),
&"RESET": SubResource("Animation_wlayh"),
&"Show": SubResource("Animation_stsyt")
}

[node name="Missile Tab" type="Control" node_paths=PackedStringArray("MissileSelectLight", "AngleSelectLight", "RangeText", "SelectedMissileText", "TouchStopper")]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_2m6j3")
MissileDockEventH = ExtResource("2_uy6ab")
DroneDockEventH = ExtResource("3_5j6a5")
MissileSelectLight = NodePath("Control/Control/MissileSelectLight")
AngleSelectLight = NodePath("Control/Control/AngleSelectLight")
RangeText = NodePath("Control/Control/RangeText")
SelectedMissileText = NodePath("Control/Control/SelectedMissileText")
TouchStopper = NodePath("Control/TouchStopper")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kt4fa")
}

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 122.0
offset_right = 20.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Control" type="Control" parent="Control"]
layout_mode = 2
anchors_preset = 0
offset_left = 20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -34.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Control/Control"]
layout_mode = 0
offset_left = -352.0
offset_top = -90.0
offset_right = 228.0
offset_bottom = 90.0
mouse_filter = 0
texture = ExtResource("4_nth3v")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control/Control/TextureRect"]
modulate = Color(0, 0, 0, 0.518)
show_behind_parent = true
layout_mode = 0
offset_left = -11.0
offset_top = -10.0
offset_right = 569.0
offset_bottom = 170.0
mouse_filter = 2
texture = ExtResource("4_nth3v")
expand_mode = 1

[node name="LaunchButton" type="TextureButton" parent="Control/Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = 62.0
offset_right = -112.0
offset_bottom = 107.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.57079
texture_normal = ExtResource("5_jqaeg")
texture_pressed = ExtResource("6_o630s")
texture_click_mask = ExtResource("7_602df")
ignore_texture_size = true
stretch_mode = 0

[node name="DissarmButton" type="TextureButton" parent="Control/Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = 8.0
offset_right = -112.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.57079
scale = Vector2(1, 1.00062)
texture_normal = ExtResource("8_tvoe2")
texture_pressed = ExtResource("9_5r1o0")
texture_click_mask = ExtResource("7_602df")
ignore_texture_size = true
stretch_mode = 0

[node name="ArmButton" type="TextureButton" parent="Control/Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -43.0
offset_right = -112.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.57079
texture_normal = ExtResource("10_ng7p5")
texture_pressed = ExtResource("11_4sk4u")
texture_click_mask = ExtResource("7_602df")
ignore_texture_size = true
stretch_mode = 0

[node name="TurnOff" type="TextureButton" parent="Control/Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = 63.0
offset_right = -199.0
offset_bottom = 124.0
grow_horizontal = 0
grow_vertical = 0
rotation = -1.57079
texture_normal = ExtResource("12_q0qm5")
texture_pressed = ExtResource("13_y4ap4")
texture_click_mask = ExtResource("7_602df")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Control/Control/TurnOff"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.5
offset_top = -22.5003
offset_right = 70.5
offset_bottom = 24.4997
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = ExtResource("14_w0uv6")
expand_mode = 1

[node name="MissileSelectLight" parent="Control/Control" instance=ExtResource("15_pknbg")]
layout_mode = 0
offset_left = 104.0
offset_top = -33.0
offset_right = 144.0
offset_bottom = 7.0

[node name="AngleSelectLight" parent="Control/Control" instance=ExtResource("15_pknbg")]
layout_mode = 0
offset_left = 104.0
offset_top = -3.0
offset_right = 144.0
offset_bottom = 37.0

[node name="RangeText" type="Label" parent="Control/Control"]
texture_filter = 6
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = -24.0
offset_top = -67.0
offset_right = 108.0
offset_bottom = -25.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.483194, 0.71686, 0.381202, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("16_6ithd")
theme_override_font_sizes/font_size = 16
text = "Range : 1000km"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SelectedMissileText" type="Label" parent="Control/Control"]
texture_filter = 6
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 31.0
offset_right = 98.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.483194, 0.71686, 0.381202, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("16_6ithd")
theme_override_font_sizes/font_size = 16
text = "Cruise Missile"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DroneGas" parent="Control/Control" instance=ExtResource("17_ptq1t")]
position = Vector2(173, -1.36424e-12)
rotation = 1.57079
scale = Vector2(0.489254, 0.449254)

[node name="TouchStopper" type="Control" parent="Control"]
layout_mode = 2
anchors_preset = 0
offset_left = -282.0
offset_top = -121.0
offset_right = 244.0
offset_bottom = 51.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Control/Control/LaunchButton" to="." method="OnLaunchPressed"]
[connection signal="pressed" from="Control/Control/DissarmButton" to="." method="OnDissarmPressed"]
[connection signal="pressed" from="Control/Control/ArmButton" to="." method="OnArmPressed"]
[connection signal="pressed" from="Control/Control/TurnOff" to="." method="TurnOffPressed"]
[connection signal="RangeChanged" from="Control/Control/DroneGas" to="." method="UpdateSteer"]
[connection signal="RangeSnapedChaned" from="Control/Control/DroneGas" to="." method="UpdateSelected"]
